User Authentication Method updated

--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -23,9 +23,9 @@
                             <a class="active" data-toggle="tab" href="#lg1">
                                 <h4> login </h4>
                             </a>
-                            <!-- <a data-toggle="tab" href="#lg2">
+                            <a href="/register">
                                 <h4> register </h4>
-                            </a> -->
+                            </a>
                         </div>
                         <div class="tab-content">
                             <div id="lg1" class="tab-pane active">
@@ -33,8 +33,6 @@
                                     <div class="login-register-form">
                                         <form action="#" method="post"> {% csrf_token %}
                                             {{form}}
-                                            <!-- <input type="text" name="phone" placeholder="Phone">
-                                            <input type="password" name="password" placeholder="Password"> -->
                                             <!-- <input type="text" name="user-name" placeholder="Username">
                                             <input type="password" name="user-password" placeholder="Password"> -->
                                             <div class="button-box">
@@ -49,20 +47,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div id="lg2" class="tab-pane">
-                                <div class="login-form-container">
-                                    <div class="login-register-form">
-                                        <form action="#" method="post">
-                                            <input type="text" name="user-name" placeholder="Username">
-                                            <input type="password" name="user-password" placeholder="Password">
-                                            <input name="user-email" placeholder="Email" type="email">
-                                            <div class="button-box">
-                                                <button type="submit"><span>Register</span></button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
