--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -1,50 +1,55 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
-    {% block content %}
-    
-    <div class="breadcrumb-area gray-bg">
-        <div class="container">
-            <div class="breadcrumb-content">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"> Auth</li>
-                </ul>
-            </div>
+
+{% block title %}
+Login
+{% endblock  %}
+
+{% block content %}
+
+<div class="breadcrumb-area gray-bg">
+    <div class="container">
+        <div class="breadcrumb-content">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"> Auth</li>
+            </ul>
         </div>
     </div>
-    <!--- login form-->
-    <div class="login-register-area pt-20 pb-100">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 col-md-12 ml-auto mr-auto">
-                    <div class="login-register-wrapper">
-                        <div class="login-register-tab-list nav">
-                            <a class="active" data-toggle="tab" href="#lg1">
-                                <h4> login </h4>
-                            </a>
-                            <a href="/register">
-                                <h4> register </h4>
-                            </a>
-                        </div>
-                        <div class="tab-content">
-                            <div id="lg1" class="tab-pane active">
-                                <div class="login-form-container">
-                                    <div class="login-register-form">
-                                        <form action="#" method="post"> {% csrf_token %}
-                                            {{form}}
-                                            <!-- <input type="text" name="user-name" placeholder="Username">
-                                            <input type="password" name="user-password" placeholder="Password"> -->
-                                            <div class="button-box">
-                                                <div class="login-toggle-btn">
-                                                    <input type="checkbox">
-                                                    <label>Remember me</label>
-                                                    <a href="#">Forgot Password?</a>
-                                                </div>
-                                                <button type="submit"><span>Login</span></button>
+</div>
+<!--- login form-->
+<div class="login-register-area pt-20 pb-100">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 col-md-12 ml-auto mr-auto">
+                <div class="login-register-wrapper">
+                    <div class="login-register-tab-list nav">
+                        <a class="active" data-toggle="tab" href="#lg1">
+                            <h4> login </h4>
+                        </a>
+                        <a href="/register">
+                            <h4> register </h4>
+                        </a>
+                    </div>
+                    <div class="tab-content">
+                        <div id="lg1" class="tab-pane active">
+                            <div class="login-form-container">
+                                <div class="login-register-form">
+                                    <form action="#" method="post"> {% csrf_token %}
+                                        {{form|crispy}}
+                                        <!-- <input type="text" name="user-name" placeholder="Username">
+                                        <input type="password" name="user-password" placeholder="Password"> -->
+                                        <div class="button-box">
+                                            <div class="login-toggle-btn">
+                                                <input type="checkbox">
+                                                <label>Remember me</label>
+                                                <a href="#">Forgot Password?</a>
                                             </div>
-                                        </form>
-                                    </div>
+                                            <button type="submit"><span>Login</span></button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -53,8 +58,8 @@
             </div>
         </div>
     </div>
-        
+</div>
+    
 
-    {% endblock content %}    
-    </body>
-</html>
+{% endblock content %}    
+
