--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,18 +1,20 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!doctype html>
 <html class="no-js" lang="zxx">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>
-          {% block title %}
-          {% endblock title %}
+            {% block title %}
+            {% endblock %}
         </title>
         <meta name="description" content="">
         <meta name="robots" content="noindex, follow" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		
 		<!-- all css here -->
         <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
