--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -31,10 +31,15 @@
 						<li class="top-hover">
 							<a href="#">Setting <i class="ion-chevron-down"></i></a>
 							<ul>
-								<li><a href="wishlist.html">Wishlist </a></li>
-								<li><a href="login-register.html">Login</a></li>
-								<li><a href="login-register.html">Register</a></li>
-								<li><a href="my-account.html">my account</a></li>
+								{% if request.user.is_authenticated %}
+								<li><a href="#wishlist.html">Wishlist </a></li>
+								<li><a href="#my-account.html">my account</a></li>
+								<li><a href="{% url 'logout' %}">Logout</a></li>
+								{% else %}
+								<li><a href="#wishlist.html">Wishlist </a></li>
+								<li><a href="{% url 'login' %}">Login</a></li>
+								<li><a href="{% url 'register' %}">Register</a></li>
+								{% endif %}
 							</ul>
 						</li>
 					</ul>
