home app created and auth pattern changed

--- a/src/accounts/templates/auth/login.html
+++ b/src/accounts/templates/auth/login.html
@@ -1,49 +1,53 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 
 {% block title %}
-Register
+Login
 {% endblock  %}
 
-{% block content %}    
+{% block content %}
+
 <div class="breadcrumb-area gray-bg">
     <div class="container">
         <div class="breadcrumb-content">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href={% url 'home:home' %}>Home</a></li>
                 <li class="active"> Auth</li>
             </ul>
         </div>
     </div>
 </div>
-<!--- register form-->
+<!--- login form-->
 <div class="login-register-area pt-20 pb-100">
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
-                        
-                        <a class="active" data-toggle="tab" href="#lg2">
-                            <h4> register </h4>
-                        </a>
-                        <a href="/login">
+                        <a class="active" data-toggle="tab" href="#lg1">
                             <h4> login </h4>
+                        </a>
+                        <a href={% url 'auth:register' %}>
+                            <h4> register </h4>
                         </a>
                     </div>
                     <div class="tab-content">
-                        <div id="lg2" class="tab-pane active">
+                        <div id="lg1" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    
                                     <form action="#" method="post"> {% csrf_token %}
-                                        {{form|crispy }}
+                                        {{form|crispy}}
                                         <!-- <input type="text" name="user-name" placeholder="Username">
-                                        <input type="password" name="user-password" placeholder="Password">
-                                        <input name="user-email" placeholder="Email" type="email"> -->
+                                        <input type="password" name="user-password" placeholder="Password"> -->
                                         <div class="button-box">
-                                            <button type="submit"><span>Register</span></button>
+                                            <div class="login-toggle-btn">
+                                                <input type="checkbox">
+                                                <label>Remember me</label>
+                                                <a href="#">Forgot Password?</a>
+                                            </div>
+                                            <button type="submit"><span>Login</span></button>
                                         </div>
                                     </form>
                                 </div>
@@ -58,3 +62,4 @@ Register
     
 
 {% endblock content %}    
+
