--- a/src/templates/partials/top_header.html
+++ b/src/templates/partials/top_header.html
@@ -34,11 +34,11 @@
 								{% if request.user.is_authenticated %}
 								<li><a href="#wishlist.html">Wishlist </a></li>
 								<li><a href="#my-account.html">my account</a></li>
-								<li><a href="{% url 'logout' %}">Logout</a></li>
+								<li><a href="{% url 'auth:logout' %}">Logout</a></li>
 								{% else %}
 								<li><a href="#wishlist.html">Wishlist </a></li>
-								<li><a href="{% url 'login' %}">Login</a></li>
-								<li><a href="{% url 'register' %}">Register</a></li>
+								<li><a href="{% url 'auth:login' %}">Login</a></li>
+								<li><a href="{% url 'auth:register' %}">Register</a></li>
 								{% endif %}
 							</ul>
 						</li>
