--- a/src/templates/adminPanel/partials/leftbar.html
+++ b/src/templates/adminPanel/partials/leftbar.html
@@ -4,27 +4,29 @@
     <div class="br-sideleft overflow-y-auto">
         <label class="sidebar-label pd-x-15 mg-t-20">Navigation</label>
         <div class="br-sideleft-menu">
-            <a href="index.html" class="br-menu-link active">
-            <div class="br-menu-item">
-                <i class="fa fa-address-book" aria-hidden="true"></i>
-                <span class="menu-item-label">Dashboard</span>
-            </div><!-- menu-item -->
-            
-            </a><!-- br-menu-link -->
-            <a href="mailbox.html" class="br-menu-link">
-            <div class="br-menu-item">
-                <i class="menu-item-icon icon ion-ios-email-outline tx-24"></i>
-                <span class="menu-item-label">Mailbox</span>
-            </div><!-- menu-item -->
-            </a><!-- br-menu-link -->
-            <a href="card-dashboard.html" class="br-menu-link">
+            <a href="{% url 'adminpanel:home' %}"
+                {% if '/adminpanel/' == request.path%}
+                    class="br-menu-link active"
+                {% else %}
+                    class="br-menu-link"
+                {% endif %}
+            >
                 <div class="br-menu-item">
-                    <i class="menu-item-icon icon ion-ios-photos-outline tx-20"></i>
-                    <span class="menu-item-label">Cards &amp; Widgets</span>
+                    <i class="fa fa-address-book" aria-hidden="true"></i>
+                    <span class="menu-item-label">Dashboard </span>
                 </div><!-- menu-item -->
-            </a><!-- br-menu-link -->
+            </a>
+            
             {% comment %} store start {% endcomment %}
-            <a href="#" class="br-menu-link">
+            <a href="#" 
+                {% if '/adminpanel/store/' == request.path  %}
+                    class="br-menu-link active"
+                {% elif '/adminpanel/store-request/' == request.path %}
+                    class="br-menu-link active"
+                {% else %}
+                    class="br-menu-link "
+                {% endif %}
+            >
                 <div class="br-menu-item">
                     <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                     <span class="menu-item-label">Store</span>
@@ -32,7 +34,24 @@
                 </div><!-- menu-item -->
             </a><!-- br-menu-link -->
             <ul class="br-menu-sub nav flex-column">
-                <li class="nav-item"><a href="{% url 'adminpanel:store_request' %}" class="nav-link">Vendor Request</a></li>
+                <li class="nav-item">
+                    <a href="{% url 'adminpanel:store' %}"
+                        {% if '/adminpanel/store/' == request.path %}
+                            class="nav-link active"
+                        {% else %}
+                            class="nav-link"
+                        {% endif %}
+                    >All Vendor</a>
+                </li>
+                <li class="nav-item acitve">
+                    <a href="{% url 'adminpanel:store_request' %}"
+                    {% if '/adminpanel/store-request/' == request.path %}
+                            class="nav-link active"
+                        {% else %}
+                            class="nav-link"
+                        {% endif %}
+                    >Vendor Request</a>
+                </li>
             </ul>
             {% comment %} store end {% endcomment %}
             <a href="#" class="br-menu-link">
