--- a/src/templates/adminPanel/store/store_details.html
+++ b/src/templates/adminPanel/store/store_details.html
@@ -17,10 +17,11 @@ Store Details
         <div class="br-pagebody">
             <div class="br-section-wrapper">
                 <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10">All Request For The Store</h6>
-                <form action="" method="POST">
+                <form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <input type="submit" class="btn btn-success mt-3" value="Add Store" name-"submit">
+                    <input type="submit" class="btn btn-success mt-3" value="Add Store" name="submit">
+                    <a onclick="return confirm('Are Your Sure, Delete The Store!')" href="{% url 'adminpanel:store_delete' store.id %}" class="btn btn-danger ml-3 mt-3" >Delete Store</a>
                 </form>
                 
             </div>
