--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>
             {% block title %}
+                DSEC
             {% endblock %}
         </title>
         <meta name="description" content="">
