--- a/src/templates/adminPanel/partials/header.html
+++ b/src/templates/adminPanel/partials/header.html
@@ -2,14 +2,14 @@
 <!-- ########## START: HEAD PANEL ########## -->
 <div class="br-header">
     <div class="br-header-left">
-    <div class="navicon-left hidden-md-down"><a id="btnLeftMenu" href="#"><i class="icon ion-navicon-round"></i></a></div>
-    <div class="navicon-left hidden-lg-up"><a id="btnLeftMenuMobile" href="#"><i class="icon ion-navicon-round"></i></a></div>
+    <div class="navicon-left hidden-md-down"><a id="btnLeftMenu" href="#"><i class="fas fa-arrows-alt-h"></i></i></a></div>
+    <div class="navicon-left hidden-lg-up"><a id="btnLeftMenuMobile" href="#"><i class="fas fa-arrows-alt-h"></i></a></div>
     <div class="input-group hidden-xs-down wd-170 transition">
-        <input id="searchbox" type="text" class="form-control" placeholder="Search">
+        {% comment %} <input id="searchbox" type="text" class="form-control" placeholder="Search">
         <span class="input-group-btn">
-            <button class="btn btn-secondary" type="button"><i class="fa fa-search"></i></button>
-        </span>
-    </div><!-- input-group -->
+            <button class="btn btn-secondary" type="button"><i class="fas fa-address-book"></i></i></button>
+        </span>  {% endcomment %}
+    </div><!-- input-group --> 
 </div><!-- br-header-left -->
     <div class="br-header-right">
     <nav class="nav">
@@ -85,7 +85,7 @@
         </div><!-- dropdown -->
         <div class="dropdown">
         <a href="#" class="nav-link pd-x-7 pos-relative" data-toggle="dropdown">
-            <i class="icon ion-ios-bell-outline tx-24"></i>
+            <i class="icon ion-android-upload tx-24"></i>
             <!-- start: if statement -->
             <span class="square-8 bg-danger pos-absolute t-15 r-5 rounded-circle"></span>
             <!-- end: if statement -->
@@ -110,7 +110,7 @@
             <!-- loop ends here -->
             <a href="#" class="media-list-link read">
                 <div class="media pd-x-20 pd-y-15">
-                <img src="../img/img9.jpg" class="wd-40 rounded-circle" alt="">
+                <img src="" class="wd-40 rounded-circle" alt="">
                 <div class="media-body">
                     <p class="tx-13 mg-b-0 tx-gray-700"><strong class="tx-medium tx-gray-800">Mellisa Brown</strong> appreciated your work <strong class="tx-medium tx-gray-800">The Social Network</strong></p>
                     <span class="tx-12">October 02, 2017 12:44am</span>
@@ -119,7 +119,7 @@
             </a>
             <a href="#" class="media-list-link read">
                 <div class="media pd-x-20 pd-y-15">
-                <img src="../img/img10.jpg" class="wd-40 rounded-circle" alt="">
+                <img src="" class="wd-40 rounded-circle" alt="">
                 <div class="media-body">
                     <p class="tx-13 mg-b-0 tx-gray-700">20+ new items added are for sale in your <strong class="tx-medium tx-gray-800">Sale Group</strong></p>
                     <span class="tx-12">October 01, 2017 10:20pm</span>
@@ -128,7 +128,7 @@
             </a>
             <a href="#" class="media-list-link read">
                 <div class="media pd-x-20 pd-y-15">
-                <img src="../img/img5.jpg" class="wd-40 rounded-circle" alt="">
+                <img src="" class="wd-40 rounded-circle" alt="">
                 <div class="media-body">
                     <p class="tx-13 mg-b-0 tx-gray-700"><strong class="tx-medium tx-gray-800">Julius Erving</strong> wants to connect with you on your conversation with <strong class="tx-medium tx-gray-800">Ronnie Mara</strong></p>
                     <span class="tx-12">October 01, 2017 6:08pm</span>
@@ -143,8 +143,8 @@
         </div><!-- dropdown -->
         <div class="dropdown">
         <a href="#" class="nav-link nav-link-profile" data-toggle="dropdown">
-            <span class="logged-name hidden-md-down">Katherine</span>
-            <img src="../img/img1.jpg" class="wd-32 rounded-circle" alt="">
+            <span class="logged-name hidden-md-down">{{request.user.first_name}}</span>
+            <img src="{{request.user.image.url}}" class="wd-32  rounded-circle" alt="" style="height:35px; width:35px; vertical-align: middle;border-radius: 50%;">
             <span class="square-10 bg-success"></span>
         </a>
         <div class="dropdown-menu dropdown-menu-header wd-200">
@@ -154,7 +154,10 @@
             <li><a href="#"><i class="icon ion-ios-download"></i> Downloads</a></li>
             <li><a href="#"><i class="icon ion-ios-star"></i> Favorites</a></li>
             <li><a href="#"><i class="icon ion-ios-folder"></i> Collections</a></li>
-            <li><a href="#"><i class="icon ion-power"></i> Sign Out</a></li>
+            <li><a href="{% url 'auth:logout' %}">
+                <i class="fas fa-sign-out-alt"></i>
+            Sign Out</a></li>
+            
             </ul>
         </div><!-- dropdown-menu -->
         </div><!-- dropdown -->
@@ -169,4 +172,5 @@
     </div><!-- navicon-right -->
     </div><!-- br-header-right -->
 </div><!-- br-header -->
+
 <!-- ########## END: HEAD PANEL ########## -->
