--- a/src/templates/adminPanel/user/user.html
+++ b/src/templates/adminPanel/user/user.html
@@ -1,15 +1,14 @@
 {% extends "adminPanel/base.html" %}
 {% load static %}
 {% block title %}
-All Request Store
+All Users
 {% endblock title %}
-
 {% block content %}
-    <div class="br-mainpanel">
+<div class="br-mainpanel">
         <div class="br-pageheader pd-y-15 pd-l-20">
             <nav class="breadcrumb pd-0 mg-0 tx-12">
                 <a class="breadcrumb-item" href="{% url 'adminpanel:home' %}">Home</a>
-                <span class="breadcrumb-item active">All Request Store</span>
+                <span class="breadcrumb-item active">All Active User</span>
             </nav>
         </div>
 
@@ -17,7 +16,7 @@ All Request Store
             <div class="br-section-wrapper">
             
                 <!--form start-->
-                <form action="{% url 'adminpanel:store_request' %}" method="GET" id="selectForm">
+                <form action="{% url 'adminpanel:adminpanel_user:all_user' %}" method="GET" id="selectForm">
                     <div class="d-flex">
                         <div id="slWrapper" class="parsley-select wd-250">
                             <select class="form-control select2" data-placeholder="Choose one"
@@ -26,7 +25,7 @@ All Request Store
                                 name="keyword"
                             >
                                 {% comment %} <option selected="true" >(All)</option> {% endcomment %}
-                                {% for index,value in state_choices.items %}
+                                {% for index,value in user_choices.items %}
                                     <option value={{index}} 
                                         {% if key %}
                                             {% if index == key %} selected {% endif %}
@@ -50,106 +49,73 @@ All Request Store
                 </form>
             <!--form end-->
 
-            {% if all_store %}
-                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10 mg-t-30">All Request For The Store</h6>
+            {% if users %}
+                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10 mg-t-20">All Request For The user</h6>
             {% comment %} <p class="mg-b-25 mg-lg-b-50">Searching, ordering and paging goodness will be immediately added to the table, as shown in this example.</p> {% endcomment %}
 
             <div class="table-wrapper">
                 <table id="datatable1" class="table display responsive nowrap">
                 <thead>
                     <tr>
-                        <th class="wd-10p">Logo </th>
-                        <th class="wd-15p">Title</th>
-                        <th class="wd-10p">First Name</th>
-                        <th class="wd-15p">User Phone</th>
-                        <th class="wd-10p">category</th>
+                        <th class="wd-10p">Image</th>
+                        <th class="wd-15p">First Name</th>
+                        <th class="wd-10p">Phone</th>
+                        <th class="wd-5p">Email</th>
+                        <th class="wd-10p">Gender</th>
                         <th class="wd-10p">Verified</th>
                         <th class="wd-10p">Active</th>
+                        <th class="wd-10p">Admin</th>
                         <th class="wd-10p">Details</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for store in all_store  %}
+                    {% for user in users  %}
                     <tr>
-                        {% if store.logo %}
-                            <td style="padding:0 !important"><img src="{{store.logo.url}}" alt="" style="height:50px; width:50px"></td>
+                        {% if user.image %}
+                            <td style="padding:0 !important"><img src="{{user.image.url}}" alt="" style="height:50px;width:50px"></td>
                         {% else %}
                             <td style="padding:0 !important"><img src="" alt="logo" style="height:50px"></td>
                         {% endif %}
-                        <td>{{store.title}}</td>
-                        <td>{{store.user.first_name}}</td>
-                        <td>{{store.user.phone}}</td>
-                        <td>{{store.category}}</td>
+                        <td>{{user.first_name}}</td>
+                        <td>{{user.phone}}</td>
+                        <td>{{user.email}}</td>
+                        <td>{{user.gender}}</td>
                         <td>
-                            {% if store.is_verified %}
+                            {% if user.is_verified %}
                                 <i class="fa fa-check-circle" aria-hidden="true" style="color:green"></i>
                             {% else %}
                                 <i class="fa fa-check-circle" aria-hidden="true" style="color:red"></i>
                             {% endif %}
                         </td>
                         <td>
-                            {% if store.is_active %}
+                            {% if user.is_active %}
                                 <i class="fa fa-check-circle" aria-hidden="true" style="color:green"></i>
                             {% else %}
                                 <i class="fa fa-check-circle" aria-hidden="true" style="color:red"></i>
                             {% endif %}
                         </td>
-                        <td><a class="btn btn-primary btn-outline mg-b-5" href="{% url 'adminpanel:store_details' store.id %}">Details</a></td>
+                        <td>
+                            {% if user.is_admin %}
+                                <i class="fa fa-check-circle" aria-hidden="true" style="color:green"></i>
+                            {% else %}
+                                <i class="fa fa-check-circle" aria-hidden="true" style="color:red"></i>
+                            {% endif %}
+                        </td>
+                        <td><a class="btn btn-primary btn-outline mg-b-5" href="{% url 'adminpanel:adminpanel_user:user_details' user.id %}">Details</a></td>
                         
                     </tr>
                     {% endfor %}
                     
-
                 </tbody>
                 </table>
-            {% else %}
-                <h2 class="mg-t-30">No Store Found</h2>
-            {% endif %}
-
-            
             </div><!-- table-wrapper -->
-            </div>
+            {% else %}
+            <h2 class="mg-t-30">Store Not Found</h2>
+            {% endif %}
             
-            <!-- footer -->
-            {% include "adminPanel/partials/footer.html" %}
+            </div>
         </div>
-        
+        <!-- footer -->
+        {% include "adminPanel/partials/footer.html" %}
     </div>
-    <script src="{% static 'adminPanel/lib/popper.js/popper.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/bootstrap/bootstrap.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/perfect-scrollbar/js/perfect-scrollbar.jquery.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/moment/moment.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/jquery-ui/jquery-ui.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/jquery-switchbutton/jquery.switchButton.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/peity/jquery.peity.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/highlightjs/highlight.pack.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/datatables/jquery.dataTables.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/datatables-responsive/dataTables.responsive.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/select2/js/select2.min.js' %}"></script>
-
-    <script src="{% static 'adminPanel/js/bracket.js' %}"></script>
-    <script>
-        $(function(){
-            'use strict';
-            $('#datatable1').DataTable({
-            responsive: true,
-            language: {
-                searchPlaceholder: 'Search...',
-                sSearch: '',
-                lengthMenu: '_MENU_ items/page',
-            }
-            });
-
-            $('#datatable2').DataTable({
-            bLengthChange: false,
-            searching: false,
-            responsive: true
-            });
-
-            // Select2
-            $('.dataTables_length select').select2({ minimumResultsForSearch: Infinity });
-
-        });
-    </script>
-
 {% endblock content %}
