--- a/src/templates/adminPanel/user/user_details.html
+++ b/src/templates/adminPanel/user/user_details.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% block title %}
-Store Details
+User Details
 {% endblock title %}
 
 {% block content %}
@@ -11,17 +11,17 @@ Store Details
         <div class="br-pageheader pd-y-15 pd-l-20">
             <nav class="breadcrumb pd-0 mg-0 tx-12">
                 <a class="breadcrumb-item" href="{% url 'adminpanel:home' %}">Home</a>
-                <span class="breadcrumb-item active">All Request Store</span>
+                <span class="breadcrumb-item active">User Details</span>
             </nav>
         </div>
 
         <div class="br-pagebody">
             <div class="br-section-wrapper">
-                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10">All Request For The Store</h6>
+                <h6 class="tx-gray-800 tx-uppercase tx-bold tx-14 mg-b-10">User Details</h6>
                 <form action="" method="POST" enctype="multipart/form-data" onsubmit="return confirm('Are Your Sure, Verified The Store!')">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    {% if 'adminpanel/store-details/' in request.path %}
+                    {% comment %} {% if 'adminpanel/user/' in request.path %}
                         {% if form.instance.is_verified %}
                             {% if form.instance.is_active %}
                                 <a  href="{% url 'adminpanel:store_deactive' store.id %}" class="btn btn-warning ml-3 mt-3"  onclick="return confirm('Are Your Sure, Deactive The Store!')" >Deactive Store</a>
@@ -39,26 +39,12 @@ Store Details
                     {% else %}
                         <input type="submit" class="btn btn-success mt-3" value="Add Store" name="submit"/>
                         <a onclick="return confirm('Are Your Sure, Delete The Store!')" href="{% url 'adminpanel:store_delete' store.id %}" class="btn btn-danger ml-3 mt-3" >Delete Store</a>
-                    {% endif %}
+                    {% endif %} {% endcomment %}
                 </form>
             </div>
         </div>
         <!-- footer -->
         {% include "adminPanel/partials/footer.html" %}
     </div>
-
-    <script src="{% static 'adminPanel/lib/popper.js/popper.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/bootstrap/bootstrap.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/perfect-scrollbar/js/perfect-scrollbar.jquery.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/moment/moment.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/jquery-ui/jquery-ui.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/jquery-switchbutton/jquery.switchButton.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/peity/jquery.peity.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/highlightjs/highlight.pack.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/datatables/jquery.dataTables.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/datatables-responsive/dataTables.responsive.js' %}"></script>
-    <script src="{% static 'adminPanel/lib/select2/js/select2.min.js' %}"></script>
-
-    <script src="{% static 'adminPanel/js/bracket.js' %}"></script>
     
 {% endblock content %}
