--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-7">
                             <div class="copyright">
-                                <p>Copyright © <a href="#">Fudink.</a> . All Right Reserved.</p>
+                                <p>Copyright © <a href="#">TE.</a> . All Right Reserved.</p>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-5">
