--- a/src/templates/auth/verify_then_register.html
+++ b/src/templates/auth/verify_then_register.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-Verify Phone
+Register (Verify Phone)
 {% endblock  %}
 
 {% block content %}
@@ -26,22 +26,20 @@ Verify Phone
             <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                 <div class="login-register-wrapper">
                     <div class="login-register-tab-list nav">
-                        <a class="active" data-toggle="tab" href="#lg1">
-                            <h4> Verify Phone </h4>
+                        <a class="active" data-toggle="tab" href="#lg2">
+                            <h4> register (Verify Phone) </h4>
                         </a>
-                        <!-- <a href={% url 'auth:register' %}>
-                            <h4> register </h4>
-                        </a> -->
+                        <a href={% url 'auth:login' %}>
+                            <h4> login </h4>
+                        </a>
                     </div>
                     <div class="tab-content">
                         <div id="lg1" class="tab-pane active">
                             <div class="login-form-container">
                                 <div class="login-register-form">
-                                    <form action="#" method="post"> {% csrf_token %}
+                                    <form action="" method="post"> {% csrf_token %}
                                         {{ form.non_field_errors }}
                                         {{form|crispy}}
-                                        <!-- <input type="text" name="user-name" placeholder="Username">
-                                        <input type="password" name="user-password" placeholder="Password"> -->
                                         <div class="button-box">
                                             <div class="login-toggle-btn">
                                                 <!-- <input type="checkbox">
